k8s/vault/vault-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - ${SUB_DOMAIN}.k8s.iradukunda.me
      secretName: vault-tls
  rules:
    - host: ${SUB_DOMAIN}.k8s.iradukunda.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
